tests/snapshots/format__after-rustfmt@turn-name-into-self.stdin.snap
---
source: tests/format.rs
expression: output
input_file: tests/inputs/turn-name-into-self.stdin
snapshot_kind: text
---
use mycrate::foo::{self, Bar};

struct Baz;

use mycrate::{foo, foo::Bar};
