tests/snapshots/format__format@4.stdin.snap
---
source: tests/format.rs
expression: output
input_file: tests/inputs/4.stdin
snapshot_kind: text
---
//! test globs (`*`)

use std::{io::{*, Write as _}};

use *;
