tests/snapshots/format__format@inner-body-use.stdin.snap
---
source: tests/format.rs
expression: output
input_file: tests/inputs/inner-body-use.stdin
snapshot_kind: text
---
mod outer {
    pub mod inner {
        // inner use items are currently unsupported
        use crate::Hello;
        use crate::World;
        use std::io::Write;
    }
}

struct Hello;
struct World;
